--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -52,6 +52,10 @@ p.p-importo {
     user-select: none;
 }
 
+.stessa-linea {
+    display: inline;
+}
+
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
