--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -56,6 +56,10 @@ p.p-importo {
     display: inline;
 }
 
+.div-spaziatore {
+    height: 70px;
+}
+
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
